--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+   "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "firebase": "^10.8.0",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^2.6.11",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "2.7.0"
+    "firebase": "^10.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
