--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-   "express": "^4.18.2",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
     "dotenv": "^16.3.1",
-    "node-fetch": "^2.6.11",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "firebase": "^10.5.0",
+    "helmet": "^7.0.0",
     "multer": "^1.4.5-lts.1",
-    "firebase": "^10.5.0"
+    "node-fetch": "^2.6.11",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
